Switch to dev and peer dependencies

--- a/package.json
+++ b/package.json
@@ -24,18 +24,20 @@
     "ui",
     "es6"
   ],
-  "dependencies": {
-    "babel-preset-react": "^6.16.0",
-    "react": "^15.3.2",
-    "react-native": "^0.36.0",
-    "react-native-svg": "^4.3.1"
-  },
   "devDependencies": {
     "babel-cli": "^6.18.0",
     "babel-core": "^6.18.0",
     "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react-native": "^1.9.0",
-    "npm-watch": "^0.1.6"
+    "babel-preset-react": "^6.16.0",
+    "npm-watch": "^0.1.6",
+    "react": "^15.3.2",
+    "react-native": "^0.36.0",
+    "react-native-svg": "^4.3.1"
+  },
+  "peerDependencies": {
+    "react": ">=15.0.0",
+    "react-native": "0.x",
+    "react-native-svg": "4.x"
   },
   "babel": {
     "presets": [
