--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "ui",
     "es6"
   ],
+  "dependencies": {
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0"
+  },
   "devDependencies": {
     "babel-cli": "^6.18.0",
     "babel-core": "^6.18.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
     "npm-watch": "^0.1.6",
     "react": "^15.3.2",
     "react-native": "^0.36.0",
