--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
     "react-native-svg": "^4.3.1"
   },
   "peerDependencies": {
-    "react": ">=15.0.0",
-    "react-native": "0.x",
+    "react-native": ">=0.33",
     "react-native-svg": "4.x"
   }
 }
