--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "watch": "npm-watch",
     "test": "echo \"Error: no test specified\" && exit 0"
   },
-  "author": "Matt Stow <matt@mattstow.com",
+  "author": "Matt Stow <matt@mattstow.com>",
   "homepage": "http://mattstow.com",
   "license": "MIT",
   "repository": "https://github.com/stowball/react-native-svg-icon.git",
@@ -32,12 +32,12 @@
     "babel-cli": "^6.18.0",
     "babel-core": "^6.18.0",
     "npm-watch": "^0.1.6",
-    "react": "^15.3.2",
-    "react-native": "^0.36.0",
-    "react-native-svg": "^4.3.1"
+    "react": "^15.4.0",
+    "react-native": "^0.38.0",
+    "react-native-svg": "^4.4.0"
   },
   "peerDependencies": {
-    "react-native": ">=0.33",
+    "react-native": ">=0.38",
     "react-native-svg": "4.x"
   }
 }
