--- a/package.json
+++ b/package.json
@@ -48,14 +48,14 @@
     "eslint-plugin-react": "^6.10.3",
     "jest": "^19.0.2",
     "npm-watch": "^0.1.6",
-    "react": "^15.4.0",
+    "react": "~15.4.0",
     "react-addons-test-utils": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-native": "^0.38.0",
+    "react-dom": "~15.4.0",
+    "react-native": "^0.41.2",
     "react-native-svg": "^4.4.0"
   },
   "peerDependencies": {
-    "react-native": ">=0.38",
+    "react-native": ">=0.41",
     "react-native-svg": "4.x"
   }
 }
