--- a/package.json
+++ b/package.json
@@ -35,14 +35,15 @@
       "/node_modules/(?!react-native-svg)"
     ]
   },
-  "dependencies": {},
+  "dependencies": {
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+  },
   "devDependencies": {
     "babel-cli": "^6.18.0",
     "babel-core": "^6.18.0",
     "babel-jest": "^19.0.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
     "enzyme": "^2.8.0",
     "eslint": "^3.19.0",
     "eslint-plugin-jest": "^19.0.1",
