--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   },
   "dependencies": {
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
+    "babel-preset-react": "^6.24.1"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
