--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "react-native-svg": "^4.4.0"
   },
   "peerDependencies": {
-    "react-native": ">=0.38",
-    "react-native-svg": "4.x"
+    "react-native": ">=0.38 < 0.40",
+    "react-native-svg": "4.4.x"
   }
 }
