--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,8 @@
 {
-  "presets": [
-    "react",
-    "es2015"
-  ]
+  "presets": ["react"],
+  "env": {
+    "production": {
+      "presets": ["es2015"]
+    }
+  }
 }
