--- a/package.json
+++ b/package.json
@@ -31,10 +31,10 @@
   "devDependencies": {
     "babel-cli": "^6.18.0",
     "babel-core": "^6.18.0",
-    "npm-watch": "^0.1.6",
-    "prop-types": "^15.5.10",
+    "npm-watch": "^0.7.0",
+    "prop-types": "^15.7.2",
     "react": "16.0.0-alpha.12",
-    "react-native": "0.46.0",
+    "react-native": "^0.63.3",
     "react-native-svg": "5.3.0"
   },
   "peerDependencies": {
