--- a/package.json
+++ b/package.json
@@ -24,21 +24,20 @@
     "ui",
     "es6"
   ],
-  "dependencies": {},
   "devDependencies": {
     "babel-cli": "^6.18.0",
     "babel-core": "^6.18.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
     "npm-watch": "^0.7.0",
     "prop-types": "^15.7.2",
-    "react": "16.0.0-alpha.12",
-    "react-native": "^0.63.3",
-    "react-native-svg": "5.3.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0"
+    "react": "^16.14.0",
+    "react-native": "0.64.0",
+    "react-native-svg": "5.3.0"
   },
   "peerDependencies": {
     "prop-types": "^15.5.10",
-    "react-native": ">=0.46",
+    "react-native": "^0.64.0",
     "react-native-svg": ">=5.3"
   }
 }
